# taurus

./: .gitignore  CMakeLists.txt  CmakeListsBak.txt  LICENSE  Makefile  README.md  setup.bat  setup.sh
bsp/: .gitignore  Makefile.am  clean  configure.ac  setup.sh
bsp/common/: config.mk  crt.S  hardware_selector.mk  rawfloat.c  stdlib.c
bsp/drivers/gpio/: gpio.c  led.c
bsp/drivers/i2c/: i2c.c
bsp/drivers/interrupt/: interrupt.c
bsp/drivers/pwm/: pwmc.c
bsp/drivers/qspi/: qspi.c
bsp/drivers/spi/: spi.c
bsp/drivers/timer/: timer.c
bsp/drivers/uart/: debug_uart.c  uart.c
bsp/include/: adxl345.h  config.h  debug_uart.h  gpio.h  i2c.h  interrupt.h  led.h  m25p80_eeprom.h  pwmc.h  qspi.h  spi.h  stdlib.h  timer.h  uart.h
cmake/: taurusConfig.cmake  taurusConfig.cmake.in  taurusToolchain.cmake  taurusUploader.cmake.in
common/: crt.S  hardware_selector.mk  mbl.lds  stdlib.c
docs/: create-a-project  create-a-project.md  getting-started.md
doxygen/: Doxyfile  mainpage.dox
drivers/: debug_uart.c  gpio.c  i2c.c  interrupt.c  pwmc.c  qspi.c  spi.c  timer.c  uart.c
examples/: Makefile  README.md
examples/adc/adc_demo/: Makefile  README.md  adc_demo.c
examples/adc/ads1015_i2c_adc/: Makefile  ads1015.c  ads1015.h  i2c_api.h
examples/adc/joystick_demo/: Makefile  joystick_pgm.c
examples/adc/mq3_gas_sensor_demo/: Makefile  mq3_gas_sensor_demo.c
examples/adc/pulse_sensor_demo/: Makefile  i2c_api.c  pulse_sensor_demo.c
examples/gpio/4x3_keypad_demo/: 4x3_keypad_demo.c  Makefile
examples/gpio/DHT11_temperature_humidity_sensor/: Makefile  delay.c  dht11.c  dht11.h
examples/gpio/OV7670_camera_module/: Makefile  README.md  ov7670.c
examples/gpio/PIR_motion_sensor/: Makefile  PIR_motion_sensor.c  README.md
examples/gpio/TM1637DisplayProgram/: Makefile  README.md  TM1637DisplayProgram.c  tm1637.c  tm1637.h
examples/gpio/WS2812B_demo/: Makefile  WS2812B.c  WS2812B.h  main.c
examples/gpio/buzzer_demo/: Makefile  buzzer_demo.c  delay.c  delay.h
examples/gpio/external_interrupt_pgm/: Makefile  externel_interrupt_pgm.c
examples/gpio/gpio_write_read_pgm/: Makefile  gpio_write_read_pgm.c
examples/gpio/ir_capture/: Makefile  ir_capture.c
examples/gpio/ir_code_receive_pgm/: Makefile  ir_code_receive_pgm.c
examples/gpio/ir_code_send_pgm/: Makefile  ir_code_send_pgm.c
examples/gpio/joystick_demo/: Makefile  joystick_demo.c
examples/gpio/lcd_2004a_demo/: Makefile  README.md  lcd.c  lcd.h  lcd_2004a_demo.c
examples/gpio/ldr_sensor_intr_pgm/: Makefile  README.md  ldr_sensor_intr_pgm.c
examples/gpio/ldr_sensor_pgm/: Makefile  ldr_sensor_pgm.c
examples/gpio/led_breathing/: Makefile  led_breathing.c
examples/gpio/led_toggle_pgm/: Makefile  led_toggle_pgm.c
examples/gpio/mlx90614-dci_temperature_sensor/: Makefile  mlx90614.c  mlx90614_demo.c
examples/gpio/proximity_sensor_pgm/: Makefile  proximity_sensor_pgm.c
examples/gpio/relay_pgm/: Makefile  README.md  relay_pgm.c
examples/gpio/software_serial_demo/: Makefile  main.c  soft_uart.c  soft_uart.h
examples/gpio/sound_detection_sensor/: sound_detection_sensor.c
examples/gpio/speed_sensor_pgm/: Makefile  README.md  speed_sensor_pgm.c
examples/gpio/stepper_motor_pgm/: Makefile  stepper_motor_pgm.c
examples/gpio/touch_sensor_pgm/: Makefile  README.md  touch_sensor_pgm.c
examples/gpio/ultrasound_sensor_pgm/: Makefile  ultrasound_sensor_pgm.c
examples/gpio/vibration_motor_pgm/: Makefile  vibration_prgm.c
examples/i2c/adxl345_demo/: Makefile  adxl345_demo.c
examples/i2c/at24c256_i2c_eeprom/: Makefile  at24c256.c  at24c256_demo.c  i2c_api.h
examples/i2c/bmp180_sensor_demo/: Makefile  README.md  SFE_BMP180.h  bmp180_sensor_demo.c  main.c
examples/i2c/eeprom_24aa64/: Makefile  i2c_EEPROM.c
examples/i2c/i2c_display/: Makefile  demo.c
examples/i2c/i2c_scanner/: Makefile  i2c_api.c  i2c_api.h  i2c_scanner.c
examples/i2c/industrial_robot_demo/: Makefile  at24c256.h  i2c_api.c  indstrl_rbt_eeprom_demo.c  servo.c
examples/i2c/max30102_sensor_demo/: MAX30100.h  MAX30100_Registers.h  Makefile  algorithm.c  algorithm.h  main.c  max30100.c
examples/i2c/mpu6050_sensor_demo/: MPU6050_res_define.h  Makefile  README.md  main.c
examples/i2c/oled_distance_measure/: Makefile  demo.c
examples/i2c/oled_pir_sensor/: Makefile  demo.c
examples/i2c/oled_rtc_display/: Makefile  demo.c
examples/i2c/oled_sound_sensor/: Makefile  demo.c  ssd1306.c  ssd1306.h
examples/i2c/paj7620_gesture_sensor_demo/: Makefile  README.md  i2c_api.c  i2c_api.h  main.c  paj7620.c  paj7620.h
examples/i2c/rtc_ds3231/: README.md
examples/interrupt/software_interrupt/: Makefile  software_interrupt.c
examples/interrupt/uart_interrupt/: Makefile  uart_interrupt.c
examples/projects/automatic_climate_control_system/: Makefile  automatic_climate_control_system.c  esp8266.c  esp8266.h
examples/projects/covid19_temperature_monitor_system/: Makefile  mlx90614.c  mlx90614.h  temperature_monitor.c
examples/projects/firebase_nodemcu/: README.md
examples/projects/iot-demo_bmp180/: Makefile  bmp180_sensor_demo.c  demo.c
examples/projects/lineFollowerRobot/: Makefile  README.md  main.c
examples/projects/smart_parking_system/: Makefile  fonts.h  smart_parking_system.c  ssd1306.h  ssd1306_oled.c
examples/projects/tempds18b20/: ds18b20_sensor.c  gpio_1wire.c
examples/projects/temperature_monitoring_system/: Makefile  ds18b20.h  ir_send.c  temperature_monitoring_system.c
examples/projects/temperature_monitoring_system_interrupt/: Makefile  ds18b20_sensor.c  temperature_monitoring_system.c
examples/pwm/pwm_as_gpio/: Makefile  main.c
examples/pwm/pwm_intr_sample_pgm/: Makefile  main.c
examples/pwm/pwm_led_brightness/: Makefile  main.c
examples/pwm/pwm_single_pulse/: Makefile  main.c
examples/pwm/servo_motor_demo/: Makefile  README.md  main.c  servo.c  servo.h
examples/qspi/: Makefile  qspi_demo.c
examples/spi/at25sf161_spi_eeprom/: Makefile  README.md  at25sf161.c  (+2 more)
include/: adc.h  config.h  ds3231_rtc.h  encoding.h  gpio.h  interrupt.h  m25p80_eeprom.h  pwmc.h  qspi.h  stdlib.h  timer.h
(+97 files in other folders)
